[gd_scene load_steps=6 format=3 uid="uid://cp14f66a3rg3"]

[ext_resource type="PackedScene" uid="uid://d0aw7hwef7tyj" path="res://main/demo_picker_ui.tscn" id="1"]
[ext_resource type="Theme" uid="uid://cjj058exws11l" path="res://common/ui/ui_theme.tres" id="2"]
[ext_resource type="Script" path="res://main/demo_player.gd" id="5"]
[ext_resource type="Script" path="res://main/demo_selector.gd" id="6"]

[sub_resource type="Shortcut" id="2"]

[node name="DemoSelector" type="Node"]
script = ExtResource("6")

[node name="DemoPlayer" type="Node2D" parent="."]
script = ExtResource("5")

[node name="DemoPickerUI" parent="." instance=ExtResource("1")]
offset_left = -15.0
offset_top = 5.0
offset_right = -15.0
offset_bottom = 5.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="ButtonGoBack" type="Button" parent="CanvasLayer"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -156.0
offset_right = 271.0
offset_bottom = -42.0
size_flags_horizontal = 4
size_flags_vertical = 13
focus_mode = 0
theme = ExtResource("2")
shortcut = SubResource("2")
text = "GO BACK"
